# Backend

./: .gitignore  Dockerfile  Procfile  README.md  gunicorn_conf.py  lichess.py  password.txt  pyproject.toml  recurse.py  start.sh
.github/workflows/: docker.yml
app/: __main__.py  anime_schema.py  app.py  ml_model.ipynb  profile_schema.py
app/db/: anilist_crud.py  anime_crud.py  auth_crud.py  chat_crud.py  crud.py  db_client.py  matches_crud.py  profile_crud.py  s3_crud.py  s3bucket_client.py  users_crud.py
app/routers/: anilist.py  anime.py  chat.py  chats.py  database.py  login.py  profile.py  users.py
app/schemas/: anime_schema.py  chat_schema.py  matches_schema.py  profile_schema.py
db/: create.sql
queries/: anime.sql  chat.sql  create.sql  matches.sql  text_codes.txt  user.sql
