[tool.poetry]
name = "nutripal-backend"
version = "0.1.0"
description = ""
authors = ["Arnav Jindal <arnav.jindal7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
supabase = "^1.1.1"
python-dotenv = "^1.0.0"
websocket = "^0.2.1"
boto3 = "^1.28.78"
pandas = "^2.1.3"
numpy = "^1.26.2"
uvloop = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
